--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sgl
-description: A simple command-line application.
-# version: 1.0.0
-# homepage: https://www.example.com
+description: SGL implementation on Dart. SGL is originally written in python and is maintained by Evernym.
+version: 0.0.1
+homepage: https://github.com/ghabxph/dart_sgl
 
 environment:
   sdk: '>=2.8.1 <3.0.0'
